<resources>
    <string name="app_name">QuickNotes</string>
    <string name="notes_list_title">My Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes yet</string>
    <string name="create_first_note">Create your first note!</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_saved">Note saved</string>
    <string name="note_updated">Note updated</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_confirmation">Are you sure you want to delete this note?</string>
    <string name="delete_confirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="category">Category</string>
    <string name="no_category">No Category</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="ideas">Ideas</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
</resources>